# miedaria-paunilor

./: .env  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  env.sample  frontend-todo.txt  future_plans.md  generate-ssl.sh  package-lock.json  package.json  test_pagination.sh  todo.txt  tsconfig.json
.next/: app-build-manifest.json  build-manifest.json  trace
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.33a88fe24b63731a.hot-update.js
.next/types/app/: layout.ts  page.ts
backend/: .Dockerfile.swp  .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh
backend/.cargo/: config.toml
backend/migrations/20250101000000_create_tables/: down.sql  up.sql
backend/migrations/20260505000000_harden_indexes_fks/: down.sql  up.sql
backend/migrations/20260718000000_create_lots/: up.sql
backend/migrations/20260719000000_create_orders/: down.sql  up.sql
backend/migrations/20260719000001_create_site_settings/: down.sql  up.sql
backend/migrations/create_tables/: down.sql  up.sql
backend/src/: auth.rs  blog_crud.rs  db.rs  enum_crud.rs  enums.rs  error.rs  image_crud.rs  language.rs  lib.rs  localized.rs  lot_crud.rs  main.rs  models.rs  order_crud.rs  pagination.rs  product_crud.rs  rss_crud.rs  schema.rs  settings_crud.rs  sitemap_crud.rs  user_crud.rs  utils.rs
backend/src/routes/: blog.rs  checkout.rs  image.rs  lot.rs  misc.rs  mod.rs  product.rs
backend/tests/: codegen_up_to_date.rs
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  generate-sitemap.sh  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  security-headers.conf
frontend/public/: robots.txt  sitemap.xml
frontend/public/.well-known/: security.txt
frontend/src/: App.css  App.tsx  enums.ts  index.css  main.tsx  types.ts
frontend/src/components/: AgeGate.css  AgeGate.tsx  (+26 more)
scripts/: check-codegen.sh  check-sitemap-logs.sh  generate-ssl.sh  init.sql  seed_data.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/components/: CollapsibleInfo.tsx  Footer.tsx  Header.tsx  ProductDetails.tsx  ProductList.tsx
src/lib/: ShopProductList.tsx  db.ts  products.ts
tests/: smoke-test.sh
(+121 files in other folders)
