[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
rand = "0.9.2"
sha2 = "0.10"
dotenvy = "0.15"
rust_decimal = { version = "1.39", features = ["db-diesel-postgres"]}
