[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
argon2 = "0.5"
governor = "0.6"
dotenvy = "0.15"
rust_decimal = { version = "1.39", features = ["db-diesel-postgres", "serde-with-float"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["multipart"] } # Added multipart feature
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] } # Added uuid and serde feature
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.38", features = ["serde"] }
r2d2 = "0.8.10"
async-trait = "0.1.80"
mime_guess = "2.0"
serde_json = "1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }